// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VOverflowBtn should use default autocomplete selections 1`] = `

<div class="v-input v-text-field v-text-field--single-line v-select v-autocomplete v-overflow-btn v-input--is-label-active v-input--is-dirty">
  <div class="v-input__control">
    <div class="v-input__slot">
      <div class="v-menu v-menu--inline">
        <div class="v-menu__activator">
          <div class="v-select__slot">
            <div class="v-select__selections">
              <div class="v-select__selection v-select__selection--comma">
                foo
              </div>
              <input readonly="readonly"
                     type="text"
                     autocomplete="off"
              >
            </div>
            <div class="v-input__append-inner">
              <div class="v-input__icon v-input__icon--append">
                <i aria-hidden="true"
                   class="v-icon material-icons"
                >
                  arrow_drop_down
                </i>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class="v-text-field__details">
      <div class="v-messages">
        <div class="v-messages__wrapper">
        </div>
      </div>
    </div>
  </div>
</div>

`;

exports[`VOverflowBtn should use default autocomplete selections 2`] = `

<div class="v-input v-text-field v-text-field--single-line v-select v-autocomplete v-overflow-btn v-overflow-btn--segmented v-input--is-label-active v-input--is-dirty">
  <div class="v-input__control">
    <div class="v-input__slot">
      <div class="v-menu v-menu--inline">
        <div class="v-menu__activator">
          <div class="v-select__slot">
            <div class="v-select__selections">
              <button type="button"
                      class="v-btn v-btn--flat"
              >
                <div class="v-btn__content">
                  foo
                </div>
              </button>
              <input readonly="readonly"
                     type="text"
                     autocomplete="off"
              >
            </div>
            <div class="v-input__append-inner">
              <div class="v-input__icon v-input__icon--append">
                <i aria-hidden="true"
                   class="v-icon material-icons"
                >
                  arrow_drop_down
                </i>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class="v-text-field__details">
      <div class="v-messages">
        <div class="v-messages__wrapper">
        </div>
      </div>
    </div>
  </div>
</div>

`;
